kubernetes/rabbitmq/ingress-dr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: rabbitmq
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  rules:
  - host: dr.rmq.budd.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-prod
            port:
              number: 15672
  tls:
  - hosts:
    - dr.rmq.budd.codes
    secretName: dr-rmq-tls
